# lammps

./: .git-blame-ignore-revs.txt  .gitattributes  .gitignore  .gitlab-ci.yml  .lgtm.yml  .travis.yml  CITATION.cff  CMakeLists.txt  HOWTO_COMPILE.md  Jenkinsfile  LAMMPS_README_ARM.md  LICENSE  README  README.i-pi  README.md  SECURITY.md  TODO.imd  TODO.openmp  TODO.rpm  check-downloads.py  cleanup.sh  extra_cleanup.sh  extract-current.sh  ffield.reax.O_H_X  fix_langevin_kokkos.cpp  in.co_magnetomech  in.cobalt  install.txt  lammps  lammps.book  mkdocs.sh  pair_coul_slater.rst  pair_morse_soft.cpp  pair_morse_soft.h  purge-workflows.py  region_ellipsoid.cpp  runconf  test.txt  tild2.cpp  tild2.h  (+1 more)
cmake/: .coveragerc.in  2826.patch  CMakeLists.libjpeg  CMakeLists.txt  CMakeLists.zlib  CMakeSettings.json  FindLAMMPS.cmake.in  LAMMPSConfig.cmake.in  README  README.md
cmake/Headers/: package.h.cmakein  style_angle.h  style_atom.h  style_body.h  style_bond.h  style_command.h  style_compute.h  style_dihedral.h  style_dump.h  style_fix.h  style_improper.h  style_integrate.h  style_kspace.h  style_minimize.h  style_nbin.h  style_npair.h  style_nstencil.h  style_ntopo.h  style_pair.h  style_reader.h  style_region.h
cmake/Modules/: CheckGeneratorSupport.cmake  CodeCoverage.cmake  CodingStandard.cmake  DetectHIPInstallation.cmake  Documentation.cmake  ExternalCMakeProject.cmake  FindCUB.cmake  FindClangFormat.cmake  FindCythonize.cmake  FindFFTW2.cmake  FindFFTW3.cmake  FindFFTW3F.cmake  FindGCOVR.cmake  FindKIM-API-V2.cmake  FindKIM-API.cmake  FindKIM.cmake  FindLATTE.cmake  FindMKL.cmake  FindMSCG.cmake  FindN2P2.cmake  FindNetCDF.cmake  FindPNetCDF.cmake  FindQE.cmake  FindQUIP.cmake  FindSphinx.cmake  FindTBB.cmake  FindTBB_MALLOC.cmake  FindVORO.cmake  FindYAML.cmake  FindYaml.cmake  FindZMQ.cmake  FindZstd.cmake  GTest.cmake  GenerateBinaryHeader.cmake  GenerateOpenCLHeader.cmake  LAMMPSInterfacePlugin.cmake  LAMMPSUtils.cmake  MPI4WIN.cmake  OpenCLLoader.cmake  OpenCLUtils.cmake  (+7 more)
cmake/gpu/: lal_pppm_d.cu  lal_pppm_f.cu
cmake/iwyu/: iwyu-extra-map.imp
cmake/packaging/: LAMMPS_DMG_Background.xcf  LAMMPS_DMG_Setup.scpt  MacOSXBundleInfo.plist.in  README.macos  build-macos-dmg-with-gui.sh  build_linux_tgz.sh  build_linux_zip.sh  build_macos_dmg.sh  build_windows_cross_zip.sh  build_windows_vs.cmake  lammps.icns  linux_wrapper.sh  png2iconset.sh  xdg-open
cmake/pkgconfig/: liblammps.pc.in
cmake/presets/: all_off.cmake  all_on.cmake  basic.cmake  clang.cmake  download.cmake  gcc.cmake  gpu-cuda.cmake  hip.cmake  hip_amd.cmake  intel.cmake  kokkos-cuda.cmake  kokkos-hip.cmake  kokkos-openmp.cmake  kokkos-serial.cmake  kokkos-sycl-intel.cmake  kokkos-sycl.cmake  macos-multiarch.cmake  manual_selection.cmake  mingw-cross.cmake  minimal.cmake  most.cmake  nolib.cmake  nvhpc.cmake  oneapi.cmake  pedantic.cmake  pgi.cmake  std.cmake  std_nolib.cmake  user.cmake  windows-intel-classic.cmake  windows-intel-llvm.cmake  windows.cmake
cmake/test/: CMakeCache.txt  Makefile  cmake_install.cmake
examples/plugins/: .clang-format  CMakeLists.txt  LAMMPSBuildMPI.cmake  LAMMPSInterfaceCXX.cmake  Makefile  Makefile.common  Makefile.macos  Makefile.serial  angle_zero2.cpp  angle_zero2.h  bond_zero2.cpp  bond_zero2.h  dihedral_zero2.cpp  dihedral_zero2.h  fix_nve2.cpp  fix_nve2.h  helloplugin.cpp  improper_zero2.cpp  improper_zero2.h  morse2plugin.cpp  nve2plugin.cpp  pair_morse2.cpp  pair_morse2.h  pair_morse2_omp.cpp  pair_morse2_omp.h  pair_zero2.cpp  pair_zero2.h  zero2plugin.cpp
lib/kokkos/: .gitignore  BUILD.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Copyright.txt  HOW_TO_SNAPSHOT  LICENSE  LICENSE_FILE_HEADER  Makefile.kokkos  Makefile.lammps  Makefile.targets  README  README.md  SECURITY.md  Spack.md  appveyor.yml  cm_generate_makefile.bash  generate_makefile.bash  gnu_generate_makefile.bash  kokkos_5538.diff  kokkos_5706.diff  kokkos_5731.diff  kokkos_5739.diff  kokkos_fix_5706_apply_last.diff  master_history.txt
lib/pace/: .gitignore  CMakeLists.txt  Install.py  Makefile  Makefile.lammps  README  TODO  ace_abstract_basis.cpp  ace_abstract_basis.h  ace_array2dlm.h  ace_arraynd.h  ace_c_basis.cpp  ace_c_basis.h  ace_c_basisfunction.h  ace_complex.h  ace_contigous_array.h  ace_evaluator.cpp  ace_evaluator.h  ace_flatten_basis.cpp  ace_flatten_basis.h  ace_radial.cpp  ace_radial.h  ace_recursive.cpp  ace_recursive.h  ace_spherical_cart.cpp  ace_spherical_cart.h  ace_timing.h  ace_types.h  ace_version.h  ships_radial.cpp  ships_radial.h
swig/: CMakeLists.txt  lammps.i  run_java_example.sh  run_lua_example.sh  run_perl_example.sh  run_python_example.sh  run_ruby_example.sh  run_tcl_example.sh
tools/lammps-gui/: .clang-format  CMakeLists.txt  README.md  TODO.md  chartviewer.cpp  chartviewer.h  codeeditor.cpp  codeeditor.h  fileviewer.cpp  fileviewer.h  findandreplace.cpp  findandreplace.h  help_index.table  helpers.cpp  helpers.h  highlighter.cpp  highlighter.h  imageviewer.cpp  imageviewer.h  lammps-gui.appdata.xml  lammps-gui.desktop  lammps-input.xml  lammps_internal_commands.txt  lammpsgui.cpp  lammpsgui.h  lammpsgui.qrc  lammpsgui.ui  lammpsrunner.cpp  lammpsrunner.h  lammpswrapper.cpp  lammpswrapper.h  linenumberarea.cpp  linenumberarea.h  logwindow.cpp  logwindow.h  main.cpp  org.lammps.lammps-gui.yml  periodic_table.h  preferences.cpp  preferences.h  (+7 more)
tools/phonon/: CMakeLists.spglib  CMakeLists.txt  Makefile  README  disp.cpp  dynmat.cpp  dynmat.h  global.h  green.cpp  green.h  input.cpp  input.h  interpolate.cpp  interpolate.h  kpath.cpp  kpath.h  main.cpp  memory.cpp  memory.h  phonon.cpp  phonon.h  phonopy.cpp  phonopy.h  qnodes.cpp  qnodes.h  timer.cpp  timer.h  version.h  version.h.in  zheevd.h
tools/swig/: CMakeLists.txt  README  lammps.i  lammps_shell.i  run_java_example.sh  run_java_example.sh.in  run_lua_example.sh  run_lua_example.sh.in  run_perl_example.sh  run_perl_example.sh.in  run_python_example.sh  run_python_example.sh.in  run_ruby_example.sh  run_ruby_example.sh.in  run_tcl_example.sh  (+3 more)
unittest/: .clang-format  CMakeLists.txt  README.md
(+33539 files in other folders)
